--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,6 +29,9 @@
 	<script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
 	<link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
 
+	<!-- Stripe -->
+	<script src="https://js.stripe.com/v3/"></script>
+
     <title>React App</title>
   </head>
   <body>
