--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
 	<!-- Stripe -->
 	<script src="https://js.stripe.com/v3/"></script>
 
-    <title>React App</title>
+    <title>Unilist</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
