--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,9 @@
 	<!-- Stripe -->
 	<script src="https://js.stripe.com/v3/"></script>
 
+	<!-- Material UI Icons -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
     <title>Unilist</title>
   </head>
   <body>
