--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,16 @@
 	<!-- Material UI Icons -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-HDW6JN1RW8"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-HDW6JN1RW8');
+	</script>
+
     <title>Unilist</title>
   </head>
   <body>
